update tmux help message

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,12 +7,20 @@
 #? 获取帮助信息
 
 #会话管理
+#tmux :#创建session
+#tmux new -s <name-of-my-session>  :#创建并指定session名字
+#Ctrl+b :kill-session  :#删除session
+#tmux ls :#列出session
+#tmux a -t $session_name  :#进入已存在的session
+#Ctrl+b :kill-server  :#删除所有session
+#tmux kill-session -t $session_name  :#删除指定session
 #s 列出所有会话
 #$ 重命名当前的会话
 #d 断开当前的会话
 
 #窗口管理
 #c 创建一个新窗口
+#& 关闭当前window
 #, 重命名当前窗口
 #w 列出所有窗口
 #% 水平分割窗口
