--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,45 +1,54 @@
-#快捷键参考
-
-#按下 Ctrl-b 后的快捷键如下：
-
-#基础
-
-#? 获取帮助信息
-
-#会话管理
-#tmux :#创建session
+#Tmux的快捷键使用说明：
+#
+#Ctrl+b 激活控制台；此时以下按键生效
+#
+#系统操作
+#	?	列出所有快捷键；按q返回
+#tmux #创建session
 #tmux new -s <name-of-my-session>  :#创建并指定session名字
-#Ctrl+b :kill-session  :#删除session
-#tmux ls :#列出session
+#	d	脱离当前会话；这样可以暂时返回Shell界面，输入tmux attach能够重新进入之前的会话
+#	D	选择要脱离的会话；在同时开启了多个会话时使用
+#tmux ls #列出session
+#	s	列出所有会话,选择并切换会话,在同时开启了多个会话时使用
 #tmux a -t $session_name  :#进入已存在的session
-#Ctrl+b :kill-server  :#删除所有session
+#	Ctrl+z	挂起当前会话
+#	r	强制重绘未脱离的会话
 #tmux kill-session -t $session_name  :#删除指定session
-#s 列出所有会话
-#$ 重命名当前的会话
-#d 断开当前的会话
+#	:	进入命令行模式；此时可以输入支持的命令，例如kill-server可以关闭服务器
+#Ctrl+b :kill-session  :#删除session
+#Ctrl+b :kill-server  :#删除所有session
+#	[	进入复制模式；此时的操作与vi/emacs相同，按q/Esc退出
+#	~	列出提示信息缓存；其中包含了之前tmux返回的各种提示信息
+#	$	重命名当前的会话
+#
+#窗口操作
+#	c	创建新窗口
+#	&	关闭当前窗口
+#	0~9	选择0~9对应的窗口
+#	p	切换至上一窗口
+#	n	切换至下一窗口
+#	l	在前后两个窗口间互相切换
+#	w	通过窗口列表切换窗口
+#	,	重命名当前窗口；这样便于识别
+#	.	修改当前窗口编号；相当于窗口重新排序
+#	f	在所有窗口中查找指定文本
+#
+#面板操作
+#	”	将当前面板平分为上下两块
+#	%	将当前面板平分为左右两块
+#	x	关闭当前面板
+#	!	将当前面板置于新窗口；即新建一个窗口，其中仅包含当前面板
+#	Ctrl+方向键	以1个单元格为单位移动边缘以调整当前面板大小
+#	Alt+方向键	以5个单元格为单位移动边缘以调整当前面板大小
+#	Space	在预置的面板布局中循环切换；依次包括even-horizontal、even-vertical、main-horizontal、main-vertical、tiled
+#	q	显示面板编号
+#	o	在当前窗口中选择下一面板
+#	方向键	移动光标以选择面板
+#	{	向前置换当前面板
+#	}	向后置换当前面板
+#	Alt+o	逆时针旋转当前窗口的面板
+#	Ctrl+o	顺时针旋转当前窗口的面板
 
-#窗口管理
-#c 创建一个新窗口
-#& 关闭当前window
-#, 重命名当前窗口
-#w 列出所有窗口
-#% 水平分割窗口
-#" 竖直分割窗口
-#n 选择下一个窗口
-#p 选择上一个窗口
-#0~9 选择0~9对应的窗口
-
-#窗格管理
-#% 创建一个水平窗格
-#" 创建一个竖直窗格
-#q 显示窗格的编号
-#o 在窗格间切换
-#} 与下一个窗格交换位置
-#{ 与上一个窗格交换位置
-#! 在新窗口中显示当前窗格
-#x 关闭当前窗格
-
-# Set a Ctrl-b shortcut for reloading your tmux config
 #设置 Ctrl-b 快捷键，用于重新加载 tmux 的配置文件
 
 # Set reload key to r
@@ -67,5 +76,6 @@ set -g status-left-length 90
 set -g status-right-length 60
 # set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)"
 set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]----"
-set -g status-justify left
+#set -g status-justify left
+set -g status-justify centre
 set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
