update .tmux.conf; del phone_home; update vimrc; add utils: 256-color-chart

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,28 +54,37 @@
 # Set reload key to r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# Count sessions start at 1
+#Count sessions start at 1
 set -g base-index 1
-
 # Use vim bindings
 setw -g mode-keys vi
-
 # Set the title bar
 set -g set-titles on
-#set -g set-titles-string '#(whoami) :: #h :: #(curl ipecho.net/plain;echo)'
-
-# set -g default-terminal "screen-256color"
 set -g default-terminal "xterm"
-
-# Set status bar
+# utf-8
 set -g status-utf8 on
-set -g status-bg red
+#设置消息前景色 背景色 高亮显示
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+#设置status-bar颜色
 set -g status-fg white
-set -g status-interval 5 
-set -g status-left-length 90
+set -g status-bg colour236 
+#设置窗口列表颜色
+#setw -g window-status-fg cyan
+setw -g window-status-fg colour004
+setw -g window-status-bg default
+setw -g window-status-attr dim
+#设置当前窗口在status bar中的颜色
+setw -g window-status-current-fg white
+setw -g window-status-current-bg default
+setw -g window-status-current-attr bright
+#设置status bar格式
+set -g status-left-length 40
+#set -g status-left "#[fg=blue]#(hostname -s)::#[fg=green]Session: #S #[fg=yellow]Window:#I #[fg=cyan]Pane:#P"
+set -g status-left ""
 set -g status-right-length 60
-# set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)"
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]----"
-#set -g status-justify left
+#set -g status-right "#[fg=cyan]%a %d %b %R"
+set -g status-right "#[fg=blue]#h::#[fg=green]Session:#S #[fg=yellow]Window:#W"
+set -g status-interval 5 
 set -g status-justify centre
-set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
