--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -72,11 +72,12 @@ set -g status-fg white
 set -g status-bg colour236 
 #设置窗口列表颜色
 #setw -g window-status-fg cyan
-setw -g window-status-fg colour004
+setw -g window-status-fg colour4
 setw -g window-status-bg default
 setw -g window-status-attr dim
 #设置当前窗口在status bar中的颜色
-setw -g window-status-current-fg white
+#setw -g window-status-current-fg white
+setw -g window-status-current-fg red 
 setw -g window-status-current-bg default
 setw -g window-status-current-attr bright
 #设置status bar格式
