change copy-mode binding-key from [ to PageUp

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@
 #	:	进入命令行模式；此时可以输入支持的命令，例如kill-server可以关闭服务器
 #Ctrl+b :kill-session  :#删除session
 #Ctrl+b :kill-server  :#删除所有session
-#	[	进入复制模式；此时的操作与vi/emacs相同，按q/Esc退出
+#	PageUp	进入复制模式；此时的操作与vi/emacs相同，按q/Esc退出
 #	~	列出提示信息缓存；其中包含了之前tmux返回的各种提示信息
 #	$	重命名当前的会话
 #
@@ -52,7 +52,9 @@
 #设置 Ctrl-b 快捷键，用于重新加载 tmux 的配置文件
 
 # Set reload key to r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind-key r source-file ~/.tmux.conf \; display "Reloaded!"
+bind-key PageUp copy-mode -eu
+unbind-key [
 
 #Count sessions start at 1
 set -g base-index 1
